--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                     <div class="card-body">
                         <h3 class="card-title">🎵 音樂創作</h3>
                         <audio controls style="width: 100%; margin-top: 10px;">
-                            <source src="assets/audio/Virtual Waves.mp3 (1).mp3" type="audio/mpeg">
+                            <source src="assets/audio/Virtual Waves (1).mp3" type="audio/mpeg">
                             您的瀏覽器不支援 audio 元素。
                         </audio>
                         <p class="card-caption" style="margin-top: 10px;">Virtual Waves(1).mp3</p>
@@ -460,7 +460,7 @@
                     <div class="card-body">
                         <h3 class="card-title">🎵 音樂創作</h3>
                         <audio controls style="width: 100%; margin-top: 10px;">
-                            <source src="assets/audio/Lords of the Cart.mp3 (1)" type="audio/mpeg">
+                            <source src="assets/audio/Lords of the Cart (1).mp3" type="audio/mpeg">
                             您的瀏覽器不支援 audio 元素。
                         </audio>
                         <p class="card-caption" style="margin-top: 10px;">Lords of the Cart(1).mp3</p>
@@ -568,4 +568,5 @@
 
 
 </html>
+
 
