--- a/index.html
+++ b/index.html
@@ -470,11 +470,11 @@
                 <div class="card">
                     <div class="card-media">
                         <video controls>
-                            <source src="assets/videoXXX.mp4" type="video/mp4">
+                            <source src="assets/video/v3.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="card-body">
-                        <h3 class="card-title">視訊作品：XXX</h3>
+                        <h3 class="card-title">視訊作品：你染上MyGO了？！</h3>
                     </div>
                 </div>
 
@@ -568,5 +568,6 @@
 
 
 </html>
+
 
 
