--- a/index.html
+++ b/index.html
@@ -480,12 +480,17 @@
 
                 <div class="card">
                     <div class="card-media">
-                        <video controls>
-                            <source src="assets/video/YYY.mp4" type="video/mp4">
-                        </video>
+                        <iframe 
+                            src="https://www.youtube.com/embed/IHTMrbkr5QM" 
+                            title="YouTube video player" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                            allowfullscreen
+                            style="aspect-ratio: 16/9;">
+                        </iframe>
                     </div>
                     <div class="card-body">
-                        <h3 class="card-title">視訊作品：YYY</h3>
+                        <h3 class="card-title">YT連結：你染上MyGO了？！</h3>
                     </div>
                 </div>
 
@@ -568,6 +573,7 @@
 
 
 </html>
+
 
 
 
