--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
             </div>
 
             <h3 style="margin-bottom: 15px; font-size: 1.1rem;">📄 研究文件 (PDF)</h3>
-            <embed src="assets/pdf/llm models.pdf" type="application/pdf" class="pdf-frame">
+            <embed src="assets/pdf/期中專案影片製作-第12組.pdf" type="application/pdf" class="pdf-frame">
 
             <h3 style="margin: 30px 0 15px; font-size: 1.1rem;">📍 我的位置</h3>
             <iframe
@@ -573,6 +573,7 @@
 
 
 </html>
+
 
 
 
