Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
             <div class="glass-box">
                 <h3 style="margin-bottom: 15px; font-size: 1.1rem;">📄 研究文件 (PDF)</h3>
-                <embed src="assets/pdf/期中專案影片製作-第12組.pdf" type="application/pdf" class="pdf-frame" width="100%">
+                <embed src="assets/pdf/期中專案影片製作-第12組.pdf#zoom=65" type="application/pdf" class="pdf-frame" width="100%">
             </div>
 
             <div class="glass-box">
@@ -280,3 +280,4 @@
 </body>
 
 </html>
+
